start functional tests